err/droopescan.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cement'...
Listing './lib/python3.5/site-packages/cement/core'...
Listing './lib/python3.5/site-packages/cement/ext'...
Listing './lib/python3.5/site-packages/cement/utils'...
Listing './lib/python3.5/site-packages/cement-2.6.2.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/droopescan-1.39.1.dist-info'...
Listing './lib/python3.5/site-packages/dscan'...
Listing './lib/python3.5/site-packages/dscan/common'...
Listing './lib/python3.5/site-packages/dscan/common/template'...
Listing './lib/python3.5/site-packages/dscan/plugins'...
Listing './lib/python3.5/site-packages/dscan/plugins/drupal'...
Listing './lib/python3.5/site-packages/dscan/plugins/internal'...
Listing './lib/python3.5/site-packages/dscan/plugins/joomla'...
Listing './lib/python3.5/site-packages/dscan/plugins/moodle'...
Listing './lib/python3.5/site-packages/dscan/plugins/silverstripe'...
Listing './lib/python3.5/site-packages/dscan/plugins/wordpress'...
Listing './lib/python3.5/site-packages/dscan/plugins.d'...
Listing './lib/python3.5/site-packages/dscan/tests'...
Listing './lib/python3.5/site-packages/dscan/tests/resources'...
Listing './lib/python3.5/site-packages/etc'...
Listing './lib/python3.5/site-packages/etc/bash_completion.d'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystache'...
Listing './lib/python3.5/site-packages/pystache/commands'...
Listing './lib/python3.5/site-packages/pystache/tests'...
Listing './lib/python3.5/site-packages/pystache/tests/data'...
Listing './lib/python3.5/site-packages/pystache/tests/data/locator'...
Listing './lib/python3.5/site-packages/pystache/tests/examples'...
Listing './lib/python3.5/site-packages/pystache-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
